# NHI-scan-mcp

./: .env.example  CONTRIBUTING.md  QUICKSTART.md  README.md  mcp_config.json  pyproject.toml  requirements.txt
examples/: README.md  basic_scan.py  permission_analysis.py  user_vs_nhi.py
src/nhi_scan_mcp/: __init__.py  __main__.py  aws_scanner.py  models.py  nhi_identifier.py  permission_analyzer.py  server.py
tests/: __init__.py  test_nhi_identifier.py
